# clue

./: .dockerignore  .gitignore  Dockerfile  README.md  clear_database.py  create_causal_test_data.py  create_test_data.py  docker-compose.yml  init.sql  init_database.py  llm_business_thinking.md  main.py  migrate_schema.py  pyproject.toml  requirements.txt  run_test.py  server.py  test_advanced_analytics_direct.py  test_business_discovery.py  test_dataset_crud.py  test_dataset_lifecycle.py  test_dataset_manager_interactive.py  test_etl_advanced_analytics.py  test_etl_pipeline.py  test_installation.py
backend/: .gitignore  README.md  create_test_data.py  main.py  pyproject.toml  requirements.txt  reset_chromadb.py  run_test.py  server.py  test_discovery.py  test_llm_client.py
backend/api/: __init__.py  models.py  websocket.py
backend/api/routes/: context.py  files.py  results.py  workflow.py
backend/src/discovery/: __init__.py  autonomous_explorer.py  code_executor.py  dashboard_generator.py  data_cleaner.py  data_profiler.py  dataset_context_generator.py  discovery_reporter.py  python_tool.py
backend/src/graph/: __init__.py  discovery_workflow.py  state.py  workflow.py
backend/src/models/: business_context.py  challenge.py  discovery_models.py  report.py
backend/src/phase1/: __init__.py  challenge_prioritizer.py
backend/src/phase2/: business_analyst.py  business_query_engine.py  dashboard_generator.py  report_generator.py  statistical_analyzer.py  visualization_engine.py
backend/src/utils/: __init__.py  chroma_manager.py
backend/template/: dashboard.html
(+156 files in other folders)
