[project]
name = "clue"
version = "0.1.0"
description = "ETL to Insights AI Agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.0",
    "chromadb>=0.4.22",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "plotly>=5.18.0",
    "pydantic>=2.0.0",
    "reportlab>=4.0.0",
]
